--- a/Home.css
+++ b/Home.css
@@ -58,3 +58,30 @@ header ul li a{
     font-weight: 500px;
     transition: all 0.3s;
 }
+.comet{
+    padding-top: 200px;
+    padding-left: 5rem;
+    margin: 20px;
+    justify-content: space-between;
+    display: flex;
+    font-size: x-large;
+    color: #fff;
+    padding-bottom: 100px;
+}
+.earth{
+    padding-left: 5rem;
+    margin: 20px;
+    justify-content: space-between;
+    display: flex;
+    font-size: x-large;
+    color: #fff;
+    padding-bottom: 100px;
+}
+.moon{
+    padding-left: 5rem;
+    margin: 20px;
+    justify-content: space-between;
+    display: flex;
+    font-size: x-large;
+    color: #fff;
+}
